update About and add ssh key page

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -54,7 +54,7 @@
       -->
       <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ site.baseurl }}/collaborators"> Collaborators </a>      
       <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ site.baseurl }}/about">About</a>
-
+      <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ site.baseurl }}/sshkey">Public SSH key</a>
 
     {% comment %}
       The code below dynamically generates a sidebar nav of pages with
